Code cleanup: comments verwijderd, imports geoptimaliseerd, custom line breaks verwijderd