@@ -1,244 +1,6 @@
-//package nl.spplatform.sppapi.config;
-//import nl.spplatform.sppapi.services.UserDetailsServiceImpl;
-//import org.springframework.context.annotation.Bean;
-//import org.springframework.context.annotation.Configuration;
-//import org.springframework.http.HttpMethod;
-//import org.springframework.security.authentication.AuthenticationManager;
-//import org.springframework.security.config.Customizer;
-//import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
-//import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
-//import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-//import org.springframework.security.config.http.SessionCreationPolicy;
-//import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-//import org.springframework.security.crypto.password.PasswordEncoder;
-//import org.springframework.security.web.SecurityFilterChain;
-//import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-//import org.springframework.web.cors.CorsConfiguration;
-//import org.springframework.web.cors.CorsConfigurationSource;
-//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-//import org.springframework.web.servlet.config.annotation.CorsRegistry;
-////
-////@EnableMethodSecurity
-////@Configuration
-////public class SecurityConfig {
-////
-////    private final UserDetailsServiceImpl userDetailsService;
-////    private final JwtAuthenticationFilter jwtAuthenticationFilter;
-////
-////    public SecurityConfig(UserDetailsServiceImpl userDetailsService, JwtAuthenticationFilter jwtAuthenticationFilter) {
-////        this.userDetailsService = userDetailsService;
-////        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
-////    }
-////
-////    @Bean
-////    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-////
-////        http
-//////                .httpBasic(Customizer.withDefaults())
-////                .authorizeHttpRequests(auth -> auth
-////                        // Publieke endpoints
-////                        .requestMatchers("/api-docs/**", "/swagger-ui/**", "/v3/api-docs/**", "/api/auth/**", "/api/register/**").permitAll()
-////                                .requestMatchers("/api/posts/**").authenticated()
-//////                                .requestMatchers(HttpMethod.DELETE, "/api/posts/**").authenticated()
-//////                                .requestMatchers(HttpMethod.POST, "/api/posts/**").authenticated()
-//////                        .requestMatchers(HttpMethod.GET, "/**").permitAll()
-//////                                .requestMatchers(HttpMethod.POST, "/**").permitAll()
-////
-//////                        // Beveiligde endpoints: Alleen voor admins
-//////                        .requestMatchers(HttpMethod.POST, "/posts/**").hasRole("ADMIN")
-//////                        .requestMatchers(HttpMethod.PUT, "/posts/**").hasRole("ADMIN")
-//////                        .requestMatchers(HttpMethod.DELETE, "/posts/**").hasRole("ADMIN")
-////
-////                        // Andere verzoeken worden geweigerd
-////                        .anyRequest().denyAll()
-////                )
-////                .csrf(csrf -> csrf.disable())
-////                .cors(cors -> {
-////                })
-////                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-////                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-////
-////        return http.build();
-////    }
-////
-////    @Bean
-////    public PasswordEncoder passwordEncoder() {
-////        return new BCryptPasswordEncoder();
-////    }
-////
-////    @Bean
-////    public AuthenticationManager authenticationManager(HttpSecurity http) throws Exception {
-////        var builder = http.getSharedObject(AuthenticationManagerBuilder.class);
-////        builder.userDetailsService(userDetailsService).passwordEncoder(passwordEncoder());
-////
-////        return builder.build();
-////    }
-////}
-//
-//
-//
-//
-//@Configuration
-//@EnableMethodSecurity
-//public class SecurityConfig {
-//
-//    private final UserDetailsServiceImpl userDetailsService;
-//    private final JwtAuthenticationFilter jwtAuthenticationFilter;
-//
-//    public SecurityConfig(UserDetailsServiceImpl userDetailsService, JwtAuthenticationFilter jwtAuthenticationFilter) {
-//        this.userDetailsService = userDetailsService;
-//        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
-//    }
-//
-//    @Bean
-//    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-//        http
-//                .csrf(csrf -> csrf.disable())
-//                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-//                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-//                .authorizeHttpRequests(auth -> auth
-//                        // PUBLIC endpoints
-//                        .requestMatchers("/api/auth/**", "/api/register/**").permitAll()
-//
-//                        // SECURED DELETE upvote endpoint
-//                        .requestMatchers(HttpMethod.DELETE, "/api/posts/{id}/upvote").authenticated()
-//
-//                        // SECURED endpoints
-//                        .requestMatchers("/api/posts/**").authenticated()
-//
-//                        // Any other request is forbidden by default
-//                        .anyRequest().denyAll()
-//                )
-//                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-//
-//        return http.build();
-//    }
-//
-//    @Bean
-//    public PasswordEncoder passwordEncoder() {
-//        return new BCryptPasswordEncoder();
-//    }
-//
-//    @Bean
-//    public AuthenticationManager authenticationManager(HttpSecurity http) throws Exception {
-//        AuthenticationManagerBuilder builder = http.getSharedObject(AuthenticationManagerBuilder.class);
-//        builder.userDetailsService(userDetailsService).passwordEncoder(passwordEncoder());
-//        return builder.build();
-//    }
-//
-//
-//    @Bean
-//    public CorsConfigurationSource corsConfigurationSource() {
-//        CorsConfiguration configuration = new CorsConfiguration();
-//        configuration.addAllowedOrigin("*"); // or set your frontend domain
-//        configuration.addAllowedMethod("*"); // allow GET, POST, PUT, DELETE
-//        configuration.addAllowedHeader("*"); // allow all headers
-//        configuration.setAllowCredentials(true); // if using cookies/auth headers
-//
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", configuration);
-//        return source;
-//    }
-//}
 package nl.spplatform.sppapi.config;
-//
-//import nl.spplatform.sppapi.services.UserDetailsServiceImpl;
-//import org.springframework.context.annotation.Bean;
-//import org.springframework.context.annotation.Configuration;
-//import org.springframework.http.HttpMethod;
-//import org.springframework.security.authentication.AuthenticationManager;
-//import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
-//import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
-//import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-//import org.springframework.security.config.http.SessionCreationPolicy;
-//import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-//import org.springframework.security.crypto.password.PasswordEncoder;
-//import org.springframework.security.web.SecurityFilterChain;
-//import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-//import org.springframework.web.cors.CorsConfiguration;
-//import org.springframework.web.cors.CorsConfigurationSource;
-//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-//import org.springframework.web.filter.CorsFilter;
-//
-//import java.util.Arrays;
-//
-//@Configuration
-//@EnableMethodSecurity
-//public class SecurityConfig {
-//
-//    private final UserDetailsServiceImpl userDetailsService;
-//    private final JwtAuthenticationFilter jwtAuthenticationFilter;
-//
-//    public SecurityConfig(UserDetailsServiceImpl userDetailsService, JwtAuthenticationFilter jwtAuthenticationFilter) {
-//        this.userDetailsService = userDetailsService;
-//        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
-//    }
-//
-//    @Bean
-//    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-//        http
-//                .csrf(csrf -> csrf.disable())
-//                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-//                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-//                .authorizeHttpRequests(auth -> auth
-//                        // PUBLIC endpoints
-//                        .requestMatchers("/api/auth/**", "/api/register/**").permitAll()
-//
-//                        // SECURED endpoints
-//                        .requestMatchers("/api/posts/**").authenticated()
-//                        .requestMatchers("/api/posts/*/upvote").authenticated()
-//                        .requestMatchers("/api/profile/**").authenticated()
-//                        .requestMatchers("/api/whoami").authenticated()
-//
-//                        // Any other request is forbidden
-//                        .anyRequest().denyAll()
-//                )
-//                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-//
-//        return http.build();
-//    }
-//
-//    @Bean
-//    public PasswordEncoder passwordEncoder() {
-//        return new BCryptPasswordEncoder();
-//    }
-//
-//    @Bean
-//    public AuthenticationManager authenticationManager(HttpSecurity http) throws Exception {
-//        AuthenticationManagerBuilder builder = http.getSharedObject(AuthenticationManagerBuilder.class);
-//        builder.userDetailsService(userDetailsService).passwordEncoder(passwordEncoder());
-//        return builder.build();
-//    }
-//
-//    @Bean
-//    public CorsConfigurationSource corsConfigurationSource() {
-//        CorsConfiguration configuration = new CorsConfiguration();
-//        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173")); // your frontend
-//        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//        configuration.setAllowedHeaders(Arrays.asList("*"));
-//        configuration.setAllowCredentials(true);
-//
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", configuration);
-//        return source;
-//    }
-//
-//    // 🆕 Global Cors Filter to fix preflight requests for login
-//    @Bean
-//    public CorsFilter corsFilter() {
-//        CorsConfiguration config = new CorsConfiguration();
-//        config.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-//        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//        config.setAllowedHeaders(Arrays.asList("*"));
-//        config.setAllowCredentials(true);
-//
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", config);
-//        return new CorsFilter(source);
-//    }
-//}
 
-
+import nl.spplatform.sppapi.Security.JwtRequestFilter;
 import nl.spplatform.sppapi.Security.JwtService;
 import nl.spplatform.sppapi.services.UserDetailsServiceImpl;
 import org.springframework.context.annotation.Bean;
@@ -252,13 +14,13 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import nl.spplatform.sppapi.Security.JwtRequestFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 
 @Configuration
@@ -273,42 +35,16 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http, JwtService jwtService) throws Exception {
 
-        http
-                .httpBasic(hp -> hp.disable()) //aanpassing
-                .authorizeHttpRequests(auth -> auth
+        http.httpBasic(hp -> hp.disable()).authorizeHttpRequests(auth -> auth
                         // PUBLIC endpoints
-                        .requestMatchers("/api-docs/**", "/swagger-ui/**", "/v3/api-docs/**").permitAll()
-                        .requestMatchers("/api/auth/**", "/api/register/**").permitAll()
-                        .requestMatchers("/api/profile/uploads/files/**").permitAll()
-                        .requestMatchers(HttpMethod.DELETE,"/api/posts/*/upvote").permitAll()
+                        .requestMatchers("/api-docs/**", "/swagger-ui/**", "/v3/api-docs/**").permitAll().requestMatchers("/api/auth/**", "/api/register/**").permitAll().requestMatchers("/api/profile/uploads/files/**").permitAll().requestMatchers(HttpMethod.DELETE, "/api/posts/*/upvote").permitAll()
 
                         // SECURED endpoints
-                        .requestMatchers("/api/posts/**").authenticated()
-                        .requestMatchers("/api/posts/*/upvote").authenticated()
-                        .requestMatchers("/api/profile/**").authenticated()
-                        .requestMatchers("/api/whoami").authenticated()
+                        .requestMatchers("/api/posts/**").authenticated().requestMatchers("/api/posts/*/upvote").authenticated().requestMatchers("/api/profile/**").authenticated().requestMatchers("/api/whoami").authenticated()
 
                         // Any other request is forbidden
-                        .anyRequest().denyAll()
-                )
-//                .authorizeHttpRequests(auth -> auth
-//                        // Publieke endpoints
-//                        .requestMatchers("/api-docs/**", "/swagger-ui/**", "/v3/api-docs/**").permitAll()
-//                        .requestMatchers("/login").permitAll() //aanpassing
-//
-//                        .requestMatchers(HttpMethod.GET, "/cars").hasAnyRole("USER")
-//                        // Beveiligde endpoints: Alleen voor admins
-//                        .requestMatchers("/cars/**").hasRole("ADMIN")
-//
-//                        // Andere verzoeken worden geweigerd
-//                        .anyRequest().denyAll()
-//                )
-                .addFilterBefore(new JwtRequestFilter(jwtService), UsernamePasswordAuthenticationFilter.class) // aanpassing
-                .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())
-                )
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-        ;
+                        .anyRequest().denyAll()).addFilterBefore(new JwtRequestFilter(jwtService), UsernamePasswordAuthenticationFilter.class) // aanpassing
+                .csrf(csrf -> csrf.disable()).cors(cors -> cors.configurationSource(corsConfigurationSource())).sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
         return http.build();
     }
 
@@ -324,12 +60,13 @@ public class SecurityConfig {
 
         return builder.build();
     }
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173")); // your frontend
+        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // your frontend
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -337,13 +74,12 @@ public class SecurityConfig {
         return source;
     }
 
-    // 🆕 Global Cors Filter to fix preflight requests for login
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+        config.setAllowedOrigins(List.of("http://localhost:5173"));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
